--- a/src/MusicPlayer.css
+++ b/src/MusicPlayer.css
@@ -1,10 +1,24 @@
 @import url(~normalize.css/normalize.css);
 @import url(~font-awesome/css/font-awesome.css);
+.header-top * {
+  font-family: 'Gloria Hallelujah', cursive !important; }
+
+.header-top {
+  color: #ecf0f1;
+  text-align: center;
+  margin-top: 200px;
+  font-size: 50px;
+  line-height: 1px;
+  font-weight: 500; }
+
 * {
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,PingFang SC,Source Han Sans CN,Hiragino Sans GB,Microsoft YaHei,WenQuanYi Micro Hei,sans-serif;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
+
+body {
+  background: #2c3e50; }
 
 .player-container, .player-container .info-and-control .time-and-volume, .player-container .info-and-control .control-container, .player-container .info-and-control .control-container .mode-control, .player-container .info-and-control .control-container .controls {
   display: flex; }
@@ -39,7 +53,8 @@
         overflow: hidden;
         white-space: nowrap; }
       .player-container .info-and-control .music-info .title {
-        margin-bottom: 0;
+        margin-bottom: 20px;
+        margin-top: 20px;
         color: #030303;
         font-size: 1.5em; }
       .player-container .info-and-control .music-info .artist {
